version1/styles/main.css
/*
 * Created Date: May 15 2024, 04:48:30 PM
 * Author: @WhoTho whotho06@gmail.com
 * -----
 * Last Modified: May 19 2024, 11:18:19 PM
 * Modified By: @WhoTho
 * -----
 * CHANGE LOG:
 * Date                        | Comments
 * ----------------------------+---------------------------------------------
 */

:root {
    --color-white: #eff7f8;
    --color-black: #00010f;

    --color-lightest: #caf0f8;
    --color-light: #90e0ef;
    --color-mid: #00b4d8;
    --color-dark: #0077b6;
    --color-darkest: #03045e;

    --color-secondary: #d47822;
}

body {
    color: var(--color-black);
    font-family: "Montserrat", sans-serif;
    font-size: 16px;
}

/* Minimal Scrollbar */
::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
    background-color: var(--color-lightest);
}

::-webkit-scrollbar-thumb {
    background-color: var(--color-mid);
    border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: var(--color-dark);
}

/* -------------------------------------------------------------------------- */
/*                                   STYLES                                   */
/* -------------------------------------------------------------------------- */

body {
    background-image: url("../assets/background.png");
}

/* ----------------------------- GENERAL SECTION ---------------------------- */

.section {
    display: flex;
    width: 100%;
}

h1 {
    font-size: 4rem;
    font-weight: bold;
}

h2 {
    font-size: 3rem;
    font-weight: bold;
}

h3 {
    font-size: 2rem;
    font-weight: bold;
}

p {
    line-height: 200%;
}

strong {
    font-weight: bold;
}

